<resources>
    <string name="app_name">EventWise</string>
    <string name="events">Events</string>
    <string name="groups">Groups</string>
    <string name="user">User</string>
    <string name="approved_events">Approved Events</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="displayed_username">Displayed Username</string>
    <string name="member_situations">Member Situations</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Event Location</string>
    <string name="event_time">Event Time</string>
    <string name="event_type">Event Type</string>
    <string name="update_event">Update Event</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirmation">New Password Confirmation</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="group_location">Group Location</string>
    <string name="delete_group">Delete Group</string>
    <string name="event_name">Event Name</string>
    <string name="delete_event">Delete Event</string>
    <string name="add_remove_people">Add/Remove People</string>
    <string name="create_event">Create Event</string>
    <string name="active_events">Active Events</string>
    <string name="logs">Logs</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="displayed_name">Displayed Name</string>
    <string name="location">Location</string>
    <string name="create_group">Create Group</string>
    <string name="members">Members</string>
    <string name="search_people">Search People</string>
    <string name="founded_people">Founded People</string>
    <string name="add_to_group">Add to Group</string>
    <string name="remove_from_group">Remove from Group</string>
    <string name="choose_date_time">Choose Date Time</string>
    <string name="exit_from_group">Exit from Group</string>
    <string name="update_group">Update Group</string>
    <string name="No">no</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_exit_from_group">Are you sure you want to exit from group?</string>
    <string name="sure_delete_event">Are you sure you want to delete this event?</string>
    <string name="sure_delete_account">Are you sure you want to delete your account?</string>
    <string name="you_don_t_have_any_upcoming_events">You don\'t have any upcoming events!</string>
    <string name="you_haven_t_joined_any_groups_yet">You haven\'t joined any groups yet!</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="eating">Eating</string>
    <string name="party">Party</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="entertainment">Entertainment</string>
    <string name="visit">Visit</string>
    <string name="study">Study</string>
    <string name="travel">Travel</string>
</resources>
