...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_xlarge"
                    android:hint="@string/group_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/updateGroupActivityEditTextGroupLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:background="@drawable/text_field_background"
                        android:ems="10"
                        android:layout_margin="@dimen/margin_medium"
...
                        android:paddingTop="@dimen/form_text_field_padding_vertical"
                        android:textSize="@dimen/text_size_medium" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateGroupActivityDeleteGroupButton"
                    android:layout_width="@dimen/form_button_width"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_gravity="center"
                    android:text="@string/delete_group"
...
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    app:backgroundTint="@color/secondary_color_scale2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateGroupActivitySaveButton"
                    android:layout_width="@dimen/form_button_width"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_gravity="center"
                    android:text="@string/save"
...
