...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_xlarge"
                    android:hint="@string/location" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/homeUserFragmentEditTextLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:background="@drawable/text_field_background_borderless"
                        android:layout_margin="@dimen/margin_medium"
                        android:inputType="text"
...
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    app:backgroundTint="@color/secondary_color_scale1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeUserFragmentChangePasswordButton"
                    android:layout_width="@dimen/form_button_width"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_gravity="center"
                    android:text="@string/change_password"
...
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    app:backgroundTint="@color/secondary_color_scale1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeUserFragmentDeleteAccountButton"
                    android:layout_width="@dimen/form_button_width"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_gravity="center"
                    android:text="@string/delete_account"
...
